--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -24,8 +24,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build --git C:\\Program Files\\Git\\bin"
+    "deploy": "gh-pages -d build"
   },
+  
   "eslintConfig": {
     "extends": [
       "react-app",
